# PAE_katana

./: .gitignore  README.md  katana_config.sh  pyproject.toml  requirements.txt  run_experiment.py  run_full.pbs  run_full_pipeline.sh  run_v0_v1_protocol.sh  setup_environment.sh
data/: user_profiles.json
data/problem_splits/classic_3000/: metadata.json
data/problem_splits/classic_3000/train/amazon/groundtruth/: groundtruth_0.json  groundtruth_1.json  groundtruth_10.json  groundtruth_100.json  groundtruth_101.json  groundtruth_102.json  groundtruth_103.json  groundtruth_104.json  groundtruth_105.json  groundtruth_106.json  groundtruth_107.json  groundtruth_108.json  groundtruth_109.json  groundtruth_11.json  groundtruth_110.json  groundtruth_111.json  groundtruth_112.json  groundtruth_113.json  groundtruth_114.json  groundtruth_115.json  groundtruth_116.json  groundtruth_117.json  groundtruth_118.json  groundtruth_119.json  groundtruth_12.json  groundtruth_120.json  groundtruth_121.json  groundtruth_122.json  groundtruth_123.json  groundtruth_124.json  groundtruth_125.json  groundtruth_126.json  groundtruth_127.json  groundtruth_128.json  groundtruth_129.json  groundtruth_13.json  groundtruth_130.json  groundtruth_131.json  groundtruth_132.json  (+958 more)
dataset/: .gitkeep
scripts/: analyze_task_split.py  evolution_engine.py  extract_cognitive_profiles.py  generate_report.py  summarize_v0_v1_results.py
src/: personal_rec_router.py  single_stage_rec_agent.py  skills_db.json
websocietysimulator/llm/: llm.py
websocietysimulator/tools/: evaluation_tool.py
(+4921 files in other folders)
